# cpp-sample-cmake

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: main.cpp
